<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECECEE"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="309dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:bufferType="normal"
        android:gravity="center"
        android:text="@string/a_list_artists"
        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
        android:textSize="36sp"
        android:typeface="normal"
        app:fontFamily="sans-serif-condensed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="253dp"
        android:layout_height="153dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <Button
                android:id="@+id/rapper1"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/rapper1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/rapper2" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/rapper3" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/rapper4" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/rapper5" />

        </LinearLayout>
    </ScrollView>

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintTop_toBottomOf="@+id/appTitle"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>